feature переписал контроллеры под реактивный стек